--- a/src/app/product-list/product-list.css
+++ b/src/app/product-list/product-list.css
@@ -1,3 +1,7 @@
+:host {
+  font-family: "Times New Roman", Times, serif;
+}
+
 .container {
   width: 375px;
   height: 667px;
@@ -5,7 +9,6 @@
   border: 1px solid #b1b1b1;
   border-radius: 10px;
   overflow-y: auto;
-  box-shadow: 0 0 10px rgba(0,0,0,0.1);
   background-color: #e7e7e7;
   padding: 10px;
 }
@@ -38,21 +41,21 @@
 
 .product-card {
   display: flex;
-  flex-direction: column;
+  flex-direction: column; /* 直向排列 */
   align-items: center;
   border: 1px solid #ddd;
   border-radius: 8px;
   padding: 6px;
   background-color: #fff;
-  font-size: 12px;
 }
 
 .product-card img {
   width: 100%;
   aspect-ratio: 1 / 1;
-  object-fit: cover;
+  object-fit: contain; /* 保持原有尺寸比例,内容被缩放 */
   border-radius: 4px;
 }
+
 .productName{
   font-size: 15px;
   font-weight: bold;
@@ -75,7 +78,7 @@
   border: none;
   border-radius: 999px;
   text-decoration: none;
-  display: inline-flex;
+  display: inline-flex; /* 彈性容器 */
   align-items: center;
   gap: 8px;
   font-weight: bold;
