--- a/src/app/product-detail/product-detail.css
+++ b/src/app/product-detail/product-detail.css
@@ -8,6 +8,7 @@
   margin: 0 auto;
   border: 1px solid #ccc;
   border-radius: 10px;
+  overflow-y: auto;
   background-color: #e7e7e7;
   padding: 10px;
 }
@@ -49,6 +50,10 @@
   width: 100%;
   max-height: 200px;
   border-radius: 6px;
+}
+
+.product-desc{
+  font-size: 14px;
 }
 
 .product-card .points {
